--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -18,7 +18,7 @@ jobs:
   build_and_commit:
     runs-on: ubuntu-latest
     name: 1. scrape data & upload to cloudflare kv
-    timeout-minutes: 15  # Total job timeout remains 15 minutes, which is reasonable for free tier
+    timeout-minutes: 15  # Total job timeout, maximum allowed for free tier
     steps:
       - name: checkout repository
         uses: actions/checkout@v4 # ✅ اصلاح شد: اضافه شدن @v4
@@ -31,10 +31,10 @@ jobs:
       - name: install and upgrade python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade -r requirements.txt
+          pip install requests PyGithub cloudflare # ✅ اصلاح شد: مطمئن شوید cloudflare نصب می‌شود. (قبلاً در requirement.txt نبود)
 
       - name: run scraper with timeout protection
-        timeout-minutes: 14  # ✅ اصلاح شد: افزایش به 14 دقیقه برای مطابقت با timeout کلی Job و دستور داخلی
+        timeout-minutes: 14  # Specific timeout for scraper step, slightly less than job timeout
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -42,7 +42,7 @@ jobs:
           CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}
         run: |
           # additional timeout command for extra safety
-          timeout 13m python scraper.py || { # ✅ اصلاح شد: افزایش به 13 دقیقه
+          timeout 13m python scraper.py || { # ✅ اصلاح شد: افزایش به 13 دقیقه (یک دقیقه کمتر از timeout-minutes مرحله)
             echo "scraper timed out after 13 minutes"
             echo "this could be due to github api rate limits or network issues"
             exit 1
@@ -58,7 +58,7 @@ jobs:
     needs: build_and_commit
     runs-on: ubuntu-latest
     name: 2. deploy to vercel, arvancloud & github pages
-    timeout-minutes: 8  # reduced from 10 to 8
+    timeout-minutes: 8  # Adjusted to a reasonable deployment time
     steps:
       - name: checkout repository with latest data
         uses: actions/checkout@v4 # ✅ اصلاح شد: اضافه شدن @v4
@@ -67,20 +67,20 @@ jobs:
         timeout-minutes: 3
         uses: amondnet/vercel-action@v25 # ✅ اصلاح شد: اضافه شدن @v25
         with:
-          vercel-token: ${{ secrets.vercel_token }}
-          vercel-org-id: ${{ secrets.vercel_org_id }}
-          vercel-project-id: ${{ secrets.vercel_project_id }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # ✅ اصلاح شد: حروف بزرگ برای متغیرهای Secrets
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # ✅ اصلاح شد
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # ✅ اصلاح شد
           working-directory: .
           vercel-args: '--prod'
 
       - name: deploy to arvancloud s3
         timeout-minutes: 3
         env:
-          aws_access_key_id: ${{ secrets.ARVAN_ACCESS_KEY_ID }} # ✅ اصلاح شد: ثابت‌های محیطی را معمولاً با حروف بزرگ می‌نویسند
-          aws_secret_access_key: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }} # ✅ اصلاح شد
-          aws_region: "us-east-1"
-          arvan_s3_endpoint: https://s3.ir-thr-at1.arvanstorage.com
-          arvan_s3_bucket: s3://v2v-data
+          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }} # ✅ اصلاح شد: ثابت‌های محیطی با حروف بزرگ
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }} # ✅ اصلاح شد
+          AWS_REGION: "us-east-1" # ✅ اصلاح شد: استاندارد AWS (قبلاً aws_region بود)
+          ARVAN_S3_ENDPOINT: https://s3.ir-thr-at1.arvanstorage.com # ✅ اصلاح شد
+          ARVAN_S3_BUCKET: s3://v2v-data # ✅ اصلاح شد
         run: |
           # install aws cli v2 with timeout protection
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -88,16 +88,17 @@ jobs:
           sudo ./aws/install --update
           
           # sync with timeout and retry logic
-          aws s3 sync . ${{ env.arvan_s3_bucket }} \
-            --endpoint-url ${{ env.arvan_s3_endpoint }} \
+          # از متغیرهای محیطی با حروف بزرگ استفاده می‌کنیم
+          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} \
+            --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} \
             --acl public-read \
             --delete \
             --cache-control max-age=300 \
             --cli-connect-timeout 30 \
             --cli-read-timeout 60 || {
             echo "first sync attempt failed, retrying..."
-            aws s3 sync . ${{ env.arvan_s3_bucket }} \
-              --endpoint-url ${{ env.arvan_s3_endpoint }} \
+            aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} \
+              --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} \
               --acl public-read \
               --delete \
               --cache-control max-age=300
@@ -113,4 +114,3 @@ jobs:
         timeout-minutes: 1
         id: deployment
         uses: actions/deploy-pages@v4 # ✅ اصلاح شد: اضافه شدن @v4
-
