--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -49,45 +49,21 @@ jobs:
         echo "✅ Dependencies installed successfully"
       timeout-minutes: 5
 
-    - name: 🔍 Validate and Enhance Sources
+    - name: 🔧 Validate and Enhance Sources
       run: |
-        if [ ! -f "sources.json" ]; then
-          echo "Creating enhanced sources.json..."
-          cat > sources.json << 'EOF'
-        {
-          "static": [
-            "https://raw.githubusercontent.com/peasoft/NoMoreWalls/master/list_raw.txt",
-            "https://raw.githubusercontent.com/ripaojiedian/freenode/main/sub",
-            "https://raw.githubusercontent.com/Bardiafa/Free-V2ray-Config/main/Sub.txt",
-            "https://raw.githubusercontent.com/mfuu/v2ray/master/v2ray",
-            "https://raw.githubusercontent.com/w1770946466/Auto_proxy/main/Long_term_subscription_num.txt",
-            "https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt",
-            "https://raw.githubusercontent.com/tbbatbb/Proxy/master/dist/v2ray.config.txt",
-            "https://raw.githubusercontent.com/oslook/clash-freenode/main/clash.yaml",
-            "https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg",
-            "https://raw.githubusercontent.com/wrfree/free/main/v2",
-            "https://raw.githubusercontent.com/iwxf/free-v2ray/master/index.html",
-            "https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/clash.provider.yaml",
-            "https://raw.githubusercontent.com/Kwinshadow/TelegramV2rayCollector/main/sub/mix",
-            "https://raw.githubusercontent.com/soroushmirzaei/telegram-configs-collector/main/protocols/vmess",
-            "https://raw.githubusercontent.com/soroushmirzaei/telegram-configs-collector/main/protocols/vless",
-            "https://raw.githubusercontent.com/soroushmirzaei/telegram-configs-collector/main/protocols/trojan",
-            "https://raw.githubusercontent.com/soroushmirzaei/telegram-configs-collector/main/protocols/shadowsocks",
-            "https://raw.githubusercontent.com/LonUp/NodeList/main/V2RAY/Latest.txt",
-            "https://raw.githubusercontent.com/free18/v2ray/main/v2ray.txt",
-            "https://raw.githubusercontent.com/lagzian/SS-Collector/main/ss.txt"
-          ]
-        }
-        EOF
+        # sources.json موجود است، فقط اعتبارسنجی کنیم
+        if [ -f "sources.json" ]; then
+          echo "✅ Found existing sources.json"
+          python -c "import json; json.load(open('sources.json'))" || {
+            echo "❌ Invalid sources.json format!"
+            exit 1
+          }
+        else
+          echo "❌ sources.json not found!"
+          exit 1
         fi
         
-        # Validate JSON
-        python -c "import json; json.load(open('sources.json'))" || {
-          echo "❌ Invalid sources.json!"
-          exit 1
-        }
-        
-        echo "✅ Sources validated and enhanced"
+        echo "✅ sources.json validated successfully"
       timeout-minutes: 2
 
     - name: 🔧 Execute Enhanced Scraper
@@ -332,8 +308,9 @@ jobs:
       continue-on-error: true
       timeout-minutes: 10
 
+    # Deploy to Arvan Cloud S3  
     - name: 🚀 Deploy to Arvan Cloud S3
-      if: matrix.id == 'arvan'
+      if: matrix.id == 'arvan' && secrets.ARVAN_BUCKET_NAME != ''
       id: arvan_deploy
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -346,6 +323,18 @@ jobs:
         SOURCE_DIR: '.'
       continue-on-error: true
       timeout-minutes: 8
+
+    # Handle missing Arvan bucket name
+    - name: ⚠️ Arvan Bucket Missing
+      if: matrix.id == 'arvan' && secrets.ARVAN_BUCKET_NAME == ''
+      run: |
+        echo "WARNING: ARVAN_BUCKET_NAME secret is not set!"
+        echo "Please add the following secret to your repository:"
+        echo "Name: ARVAN_BUCKET_NAME"
+        echo "Value: v2v-data (or your bucket name)"
+        echo "::warning::Arvan deployment skipped - missing ARVAN_BUCKET_NAME secret"
+        echo "::set-output name=outcome::skipped"
+      id: arvan_deploy
 
     - name: 📊 Deployment Status
       run: |
@@ -387,93 +376,35 @@ jobs:
         ref: ${{ github.ref }}
         fetch-depth: 1
 
-    - name: 📄 Create Index HTML
+    # حذف بخش ایجاد index.html جدید - استفاده از فایل موجود کاربر
+    - name: ✅ Verify Existing Files
       run: |
-        cat > index.html << 'EOF'
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>V2V Config Repository</title>
-            <style>
-                body { font-family: Arial, sans-serif; margin: 40px; background: #f5f5f5; }
-                .container { max-width: 800px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-                h1 { color: #333; text-align: center; }
-                .stats { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin: 20px 0; }
-                .stat-box { background: #e8f4fd; padding: 20px; border-radius: 8px; text-align: center; }
-                .stat-number { font-size: 2em; font-weight: bold; color: #2563eb; }
-                .links { margin: 30px 0; }
-                .link-button { display: inline-block; padding: 12px 24px; margin: 5px; background: #2563eb; color: white; text-decoration: none; border-radius: 6px; transition: background 0.3s; }
-                .link-button:hover { background: #1d4ed8; }
-                .info { background: #f0f9ff; padding: 20px; border-radius: 8px; margin: 20px 0; }
-                .footer { text-align: center; margin-top: 30px; color: #666; font-size: 0.9em; }
-            </style>
-        </head>
-        <body>
-            <div class="container">
-                <h1>🚀 V2V Configuration Repository</h1>
-                <div class="info">
-                    <p><strong>Last Updated:</strong> <span id="lastUpdate">Loading...</span></p>
-                    <p><strong>Update Frequency:</strong> Every 3 hours</p>
-                </div>
-                <div class="stats">
-                    <div class="stat-box">
-                        <div class="stat-number" id="xrayCount">Loading...</div>
-                        <div>Xray Configs</div>
-                    </div>
-                    <div class="stat-box">
-                        <div class="stat-number" id="singboxCount">Loading...</div>
-                        <div>Sing-box Configs</div>
-                    </div>
-                </div>
-                <div class="links">
-                    <h3>📥 Download Links:</h3>
-                    <a href="all_live_configs.json" class="link-button">📄 JSON Configs</a>
-                    <a href="clash_subscription.yml" class="link-button">⚔️ Clash Subscription</a>
-                    <a href="cache_version.txt" class="link-button">🕒 Cache Version</a>
-                </div>
-                <div class="info">
-                    <h3>🔧 Usage Instructions:</h3>
-                    <ul>
-                        <li><strong>JSON Configs:</strong> Contains all configurations organized by protocol and client type</li>
-                        <li><strong>Clash Subscription:</strong> Ready-to-use Clash Meta configuration</li>
-                        <li><strong>Cache Version:</strong> Timestamp for cache busting</li>
-                    </ul>
-                </div>
-                <div class="footer">
-                    <p>🤖 Automatically updated by GitHub Actions</p>
-                    <p>⭐ Star this repository if you find it helpful!</p>
-                </div>
-            </div>
-            
-            <script>
-                fetch('all_live_configs.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        const xrayCount = Object.values(data.xray || {}).reduce((sum, arr) => sum + arr.length, 0);
-                        const singboxCount = Object.values(data.singbox || {}).reduce((sum, arr) => sum + arr.length, 0);
-                        document.getElementById('xrayCount').textContent = xrayCount;
-                        document.getElementById('singboxCount').textContent = singboxCount;
-                    })
-                    .catch(() => {
-                        document.getElementById('xrayCount').textContent = 'Error';
-                        document.getElementById('singboxCount').textContent = 'Error';
-                    });
-                
-                fetch('cache_version.txt')
-                    .then(response => response.text())
-                    .then(timestamp => {
-                        const date = new Date(parseInt(timestamp) * 1000);
-                        document.getElementById('lastUpdate').textContent = date.toLocaleString();
-                    })
-                    .catch(() => {
-                        document.getElementById('lastUpdate').textContent = 'Unknown';
-                    });
-            </script>
-        </body>
-        </html>
-        EOF
+        echo "🔍 Verifying existing project files..."
+        
+        if [ -f "index.html" ]; then
+          echo "✅ Found existing index.html ($(wc -c < index.html) bytes)"
+        else
+          echo "❌ index.html not found!"
+          exit 1
+        fi
+        
+        if [ -f "index.js" ]; then
+          echo "✅ Found existing index.js ($(wc -c < index.js) bytes)"
+        else
+          echo "❌ index.js not found!"
+          exit 1
+        fi
+        
+        # Verify config files exist
+        for file in "all_live_configs.json" "clash_subscription.yml" "cache_version.txt"; do
+          if [ -f "$file" ]; then
+            echo "✅ Found $file ($(wc -c < "$file") bytes)"
+          else
+            echo "⚠️ Warning: $file not found"
+          fi
+        done
+        
+        echo "✅ File verification completed - using existing user files"
       timeout-minutes: 1
 
     - name: 🛠️ Setup Pages
