--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -2,10 +2,9 @@ name: 'V2V Complete Deploy'
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
-  workflow_dispatch:
-  push:
-    branches: [ main ]
+    - cron: '0 */3 * * *'  # هر 3 ساعت
+  workflow_dispatch:  # فقط manual trigger
+  # push رو کامل حذف کردیم تا loop نشه!
 
 permissions:
   contents: write
@@ -19,7 +18,7 @@ jobs:
     
     steps:
     # ═══════════════════════════════════════════════════════════
-    # 1. Setup & Scrape
+    # 1. Setup
     # ═══════════════════════════════════════════════════════════
     - name: Checkout
       uses: actions/checkout@v4
@@ -31,73 +30,88 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install Python Dependencies
-      run: pip install requests PyGithub PyYAML boto3
+    - name: Install Dependencies
+      run: pip install requests PyGithub PyYAML
 
+    # ═══════════════════════════════════════════════════════════
+    # 2. Scrape Configs
+    # ═══════════════════════════════════════════════════════════
     - name: Run Scraper
       run: timeout 2700 python scraper.py || true
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_SEARCH_LIMIT: 150
 
-    - name: Verify Generated Files
+    - name: Check Generated Files
       run: |
-        echo "📁 Checking files..."
-        ls -lh all_live_configs.json clash_subscription.yml cache_version.txt 2>/dev/null || true
-        echo ""
-        [ -f all_live_configs.json ] && echo "✅ all_live_configs.json" || echo "❌ Missing"
-        [ -f clash_subscription.yml ] && echo "✅ clash_subscription.yml" || echo "❌ Missing"
-        [ -f cache_version.txt ] && echo "✅ cache_version.txt" || echo "❌ Missing"
+        echo "📁 Files:"
+        ls -lh all_live_configs.json clash_subscription.yml cache_version.txt 2>/dev/null || echo "⚠️ Files missing"
 
     # ═══════════════════════════════════════════════════════════
-    # 2. Commit to Git (for GitHub Pages)
-    # ═══════════════════════════════════════════════════════════
-    - name: Commit Configs
-      run: |
-        git config user.name "V2V Bot"
-        git config user.email "bot@v2v.dev"
-        git add all_live_configs.json clash_subscription.yml cache_version.txt
-        git diff --quiet && git diff --staged --quiet || {
-          git commit -m "🔄 Update: $(date -u '+%Y-%m-%d %H:%M UTC')"
-          git push origin main
-        }
-      continue-on-error: true
-
-    # ═══════════════════════════════════════════════════════════
-    # 3. Deploy to Arvan Cloud S3
+    # 3. Deploy to Arvan Cloud (اولین اولویت!)
     # ═══════════════════════════════════════════════════════════
     - name: Install AWS CLI
       run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
+        curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
         unzip -q aws.zip
-        sudo ./aws/install --update
+        sudo ./aws/install --update || sudo ./aws/install
 
-    - name: Deploy to Arvan S3
+    - name: Deploy to Arvan Cloud
       run: |
-        aws configure set aws_access_key_id ${{ secrets.ARVAN_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
-        aws configure set default.s3.signature_version s3v4
+        # تنظیم credentials
+        aws configure set aws_access_key_id "${{ secrets.ARVAN_ACCESS_KEY_ID }}"
+        aws configure set aws_secret_access_key "${{ secrets.ARVAN_SECRET_ACCESS_KEY }}"
+        aws configure set default.region us-east-1
         
-        echo "🚀 Syncing to Arvan Cloud S3..."
-        aws s3 sync . s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
-          --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
-          --exclude ".git/*" \
-          --exclude ".github/*" \
-          --exclude "*.py" \
-          --exclude "*.pyc" \
-          --exclude "__pycache__/*" \
-          --exclude "*.zip" \
-          --exclude "aws/*" \
-          --exclude "node_modules/*" \
-          --cache-control "no-cache, must-revalidate" \
-          --acl public-read
+        BUCKET="${{ secrets.ARVAN_BUCKET_NAME }}"
+        ENDPOINT="https://s3.ir-thr-at1.arvanstorage.ir"
         
-        echo "✅ Arvan deployment complete"
-        echo "🌐 https://${{ secrets.ARVAN_BUCKET_NAME }}.s3-website.ir-thr-at1.arvanstorage.ir/"
-      continue-on-error: true
+        echo "🚀 Uploading to Arvan: $BUCKET"
+        
+        # آپلود فایل‌های ضروری یک به یک
+        for file in all_live_configs.json clash_subscription.yml cache_version.txt index.html index.js logo.png manifest.json; do
+          if [ -f "$file" ]; then
+            echo "📤 Uploading $file..."
+            aws s3 cp "$file" "s3://$BUCKET/$file" \
+              --endpoint-url="$ENDPOINT" \
+              --acl public-read \
+              --cache-control "no-cache, must-revalidate" \
+              && echo "✅ $file uploaded" \
+              || echo "❌ $file failed"
+          else
+            echo "⚠️  $file not found"
+          fi
+        done
+        
+        echo ""
+        echo "🌐 Arvan: https://$BUCKET.s3-website.ir-thr-at1.arvanstorage.ir/"
+      continue-on-error: false
 
     # ═══════════════════════════════════════════════════════════
-    # 4. Deploy to Vercel
+    # 4. Commit (برای GitHub Pages) - بدون trigger کردن workflow!
+    # ═══════════════════════════════════════════════════════════
+    - name: Commit Changes
+      run: |
+        git config user.name "V2V Bot"
+        git config user.email "bot@v2v.dev"
+        
+        # فقط فایل‌های مهم رو add کن
+        git add all_live_configs.json clash_subscription.yml cache_version.txt
+        
+        # چک کن که تغییری هست یا نه
+        if git diff --staged --quiet; then
+          echo "ℹ️ No changes to commit"
+        else
+          # Commit با [skip ci] تا workflow دوباره trigger نشه!
+          git commit -m "🔄 Update configs [skip ci]
+          
+          Automated update at $(date -u '+%Y-%m-%d %H:%M UTC')"
+          git push
+          echo "✅ Committed to GitHub"
+        fi
+
+    # ═══════════════════════════════════════════════════════════
+    # 5. Deploy to Vercel
     # ═══════════════════════════════════════════════════════════
     - name: Deploy to Vercel
       uses: amondnet/vercel-action@v25
@@ -109,53 +123,42 @@ jobs:
       continue-on-error: true
 
     # ═══════════════════════════════════════════════════════════
-    # 5. Deploy Cloudflare Workers
+    # 6. Deploy Cloudflare Workers
     # ═══════════════════════════════════════════════════════════
-    - name: Setup Node.js
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version: '20'
 
-    - name: Install Wrangler
-      run: npm install -g wrangler@latest
-
-    - name: Deploy All Workers
+    - name: Deploy Workers
       run: |
-        echo "🚀 Deploying Cloudflare Workers..."
-        wrangler deploy --env v2v-proxy && echo "✅ v2v-proxy" || echo "❌ v2v-proxy failed"
-        wrangler deploy --env v2v && echo "✅ v2v" || echo "❌ v2v failed"
-        wrangler deploy --env winter-hill-0307 && echo "✅ winter-hill-0307" || echo "❌ winter-hill-0307 failed"
-        wrangler deploy --env rapid-scene-1da6 && echo "✅ rapid-scene-1da6" || echo "❌ rapid-scene-1da6 failed"
+        npm install -g wrangler@latest
+        
+        echo "🚀 Deploying Workers..."
+        wrangler deploy --env v2v-proxy || echo "❌ v2v-proxy failed"
+        wrangler deploy --env v2v || echo "❌ v2v failed"
+        wrangler deploy --env winter-hill-0307 || echo "❌ winter-hill-0307 failed"
+        wrangler deploy --env rapid-scene-1da6 || echo "❌ rapid-scene-1da6 failed"
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       continue-on-error: true
 
     # ═══════════════════════════════════════════════════════════
-    # 6. Summary
+    # 7. Summary
     # ═══════════════════════════════════════════════════════════
-    - name: Deployment Summary
+    - name: Summary
       if: always()
       run: |
         echo ""
-        echo "╔══════════════════════════════════════════════════════╗"
-        echo "║           V2V DEPLOYMENT COMPLETED                   ║"
-        echo "╠══════════════════════════════════════════════════════╣"
-        echo "║                                                      ║"
-        echo "║  🌐 Live Sites:                                      ║"
-        echo "║                                                      ║"
-        echo "║  1️⃣  Arvan Cloud:                                    ║"
-        echo "║     https://v2v-data.s3-website.ir-thr-at1.arvan... ║"
-        echo "║                                                      ║"
-        echo "║  2️⃣  Vercel:                                         ║"
-        echo "║     https://v2v-vercel.vercel.app/                   ║"
-        echo "║                                                      ║"
-        echo "║  3️⃣  GitHub Pages:                                   ║"
-        echo "║     https://smbcryp.github.io/V2V/                   ║"
-        echo "║                                                      ║"
-        echo "║  ⚡ Workers: 4 endpoints deployed                    ║"
-        echo "║                                                      ║"
-        echo "║  ⏰ $(date -u '+%Y-%m-%d %H:%M:%S UTC')                          ║"
-        echo "║                                                      ║"
-        echo "╚══════════════════════════════════════════════════════╝"
-        echo ""
+        echo "╔════════════════════════════════════════════╗"
+        echo "║     ✅ V2V DEPLOYMENT COMPLETED            ║"
+        echo "╠════════════════════════════════════════════╣"
+        echo "║                                            ║"
+        echo "║  1️⃣  Arvan Cloud Storage                   ║"
+        echo "║  2️⃣  GitHub Pages                          ║"
+        echo "║  3️⃣  Vercel                                ║"
+        echo "║  4️⃣  Cloudflare Workers (4x)               ║"
+        echo "║                                            ║"
+        echo "║  ⏰ $(date -u '+%Y-%m-%d %H:%M UTC')                   ║"
+        echo "╚════════════════════════════════════════════╝"
